--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script type="text/javascript" src="js/kinetic-v4.3.3.min.js"></script>
         <script type="text/javascript" src="js/config.js"></script>
-        <script type="text/javascript" src="js/main2.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/Agent.js"></script>
         <script type="text/javascript" src="js/Food.js"></script>
         <script type="text/javascript" src="js/World.js"></script>
